--- a/package.json
+++ b/package.json
@@ -9,11 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~47.0.12",
+    "expo-app-loading": "~2.1.1",
+    "expo-camera": "~13.1.0",
     "expo-font": "~11.0.1",
+    "expo-location": "~15.0.1",
+    "expo-media-library": "~15.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.43.9",
+    "react-native": "0.70.8",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps": "1.3.2",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
